Fix team invitations column alignment on dashboards

--- a/app/assets/stylesheets/_dashboards.scss
+++ b/app/assets/stylesheets/_dashboards.scss
@@ -1,3 +1,8 @@
+.team-activity {
+  @include span-columns(3);
+  @include omega;
+}
+
 .completion-steps {
   @include span-columns(9);
   list-style-type: decimal;
